assets/main.css
/* ... */
.post_container .related_posts {
    margin-top: 40px;
}

.post_container .related_posts_prompt {
    font-size: 15px;
    text-transform: uppercase;
    font-weight: bold;
    text-align: left;
}

.post_container .masonry {
    margin-left: 0;
    margin-right: 0;
    margin-top: 20px;
}

#blog_masonry {
    -moz-column-count: 1;
    -webkit-column-count: 1;
    column-count: 1;
    text-align: center;
    column-gap: 0;
}

#blog_item {
    max-width: 800px;
    border: 3px solid #e8ecef;
    -webkit-border-radius: 4px;
    -moz-border-radius: 4px;
    border-radius: 4px;
    padding: 0;
    color: #666666;
}

#blog_item .blog_preview img {
    width: 100%;
    height: 450px;
    object-fit: cover;
}

#blog_item .blog_preview_info {
    width: 100%;
    background-color: #f9f9f9;
    padding: 30px;
    text-align: left;
    box-sizing: border-box;
    /** add this **/
    -moz-box-sizing: border-box;
    /** add this **/
    -webkit-box-sizing: border-box;
    /** add this **/
    -ms-box-sizing: border-box;
    /** add this **/
}

#blog_item .blog_preview_title {
    font-size: 20px;
    text-transform: uppercase;
    font-weight: bold;
    color: #666666;
    letter-spacing: 1px;
}

#blog_item .blog_preview_excerpt {
    color: #848484;
    margin-top: 10px;
}

#blog_item .blog_preview_excerpt p {
    overflow: hidden;
    text-overflow: ellipsis;
    display: -webkit-box;
    -webkit-box-orient: vertical;
    -webkit-line-clamp: 1;
}

.post_container .related_post_excerpt_container img {
    width: 280px;
    height: 280px;
    object-fit: cover;
    margin-bottom: 0px;
    margin-top: 0px;
    border: 1px solid #fff;
    -webkit-border-radius: 4px;
    -moz-border-radius: 4px;
    border-radius: 4px;
}

.post_container a {
    text-decoration: none;
    color: #5b5b5b;
}

.post_container .related_post_title {
    font-size: 15px;
    text-transform: uppercase;
    margin-top: 15px;
}

#characters {
    padding: 70px 0;
    display: block;
    max-width: 1400px;
    border-style: solid;
    border-width: 1px;
    position: relative;
}

.ccontainer {
    margin: 0 auto;
    width: 250px;
    height: 200px;
    position: relative;
    perspective: 1000px;
    z-index: 100;
}

.carousel {
    height: 100%;
    width: 100%;
    position: absolute;
    transform-style: preserve-3d;
    transition: transform 0.8s;
}

.citem {
    display: block;
    position: absolute;
    background: transparent;
    width: 202px;
    height: 235px;
    font-size: 5em;
    text-align: center;
    color: #FFF;
    z-index: 0;
}

.a {
    transform: rotateY(0deg) translateZ(250px);
    background-image: url("octopus.png");
    background-size: cover;
}

.b {
    transform: rotateY(72deg) translateZ(250px);
    background-image: url("dolphin.png");
    background-size: cover;
}

.c {
    transform: rotateY(144deg) translateZ(250px);
    background-image: url("narwhal.png");
    background-size: cover;
}

.d {
    transform: rotateY(216deg) translateZ(250px);
    background-image: url("octopus.png");
    background-size: cover;
}

.e {
    transform: rotateY(288deg) translateZ(250px);
    background-image: url("dolphin.png");
    background-size: cover;
}

.navigation_holder {
    width: 600px;
    height: 100%;
    position: absolute;
    margin: 0 auto;
    top: 0px;
    margin-left: auto;
    margin-right: auto;
    left: 0;
    right: 0;
}

.next {
    width: 250px;
    height: 100%;
    float: right;
    background: yellow;
    z-index: 1000;
    perspective: 1200;
}

.prev {
    width: 250px;
    height: 100%;
    float: left;
    background: red;
    z-index: 1000;
}

.about_container {
    width: 100%;
    max-width: 900px;
    height: 340px;
    display: block;
    margin: 0 auto;
    box-sizing: border-box;
    /** add this **/
    -moz-box-sizing: border-box;
    /** add this **/
    -webkit-box-sizing: border-box;
    /** add this **/
    -ms-box-sizing: border-box;
    /** add this **/
    margin-bottom: 30px;
}

.about_pic {
    width: 45%;
    height: 340px;
    float: left;
    background-image: url("about_temp_img.png");
    background-repeat: no-repeat;
    background-size: contain;
    padding: 10px;
    box-sizing: border-box;
    /** add this **/
    -moz-box-sizing: border-box;
    /** add this **/
    -webkit-box-sizing: border-box;
    /** add this **/
    -ms-box-sizing: border-box;
    /** add this **/
    background-position: center;
}

.about_text {
    position: relative;
    float: right;
    width: 45%;
    display: block;
    padding: 10px;
    color: #636263;
    box-sizing: border-box;
    /** add this **/
    -moz-box-sizing: border-box;
    /** add this **/
    -webkit-box-sizing: border-box;
    /** add this **/
    -ms-box-sizing: border-box;
    /** add this **/
}

@media screen and (max-width: 800px) {
    .about_pic {
        width: 100%;
        float: none;
    }
    .about_text {
        width: 100%;
        float: none;
    }
    .about_container {
        height: 100%;
    }
    .footer {}
}

.about_title {
    font-weight: bold;
    font-size: 30px;
}

.about_content {
    margin-top: 20px;
    line-height: 22px;
    font-size: 16px;
}

.about_email {
    margin-top: 20px;
    font-size: 14px;
    font-weight: bold;
    letter-spacing: 2px;
}

.fish_ll {
  position: relative;
  text-align: center;
  margin: 0 auto;
  margin-bottom: 150px;
  width: 100%;
  max-width: 800px;
}

.image_circle {
  width: 200px;
  height: 200px;
  border-radius: 50%;
  border: 4px solid rgb(65, 176, 247);;
}

.rounded_image_container {
  width: 100%;
  position: absolute;
  top: -108px;
  text-align: center;
}
.rounded_image {
  width: 200px;
  height: 200px;
  border-radius: 50%;
  background-repeat: no-repeat;
  margin: 0 auto;
}

#rounded_octopus {
background-image: url("octopus_icon.png");
border: 8px solid #fce4d9;
background-size: cover;
}

#rounded_octopus_back {
background-image: url("shark_icon.png");
border: 8px solid #fce4d9;
background-size: cover;
}
/* ... */

